added retrocompatibility with konos extension. Cleaned code. Fixed language distribution